Gmail less secure app setting

--- a/website/index.html
+++ b/website/index.html
@@ -175,15 +175,15 @@
       <tr>
         <th>Email Provider</th>
         <th>SMTP Settings</th>
-        <th>Allow "less secure" app</th>
+        <th>Other</th>
       </tr>
       <tr>
         <td>Gmail<br />GSuite</td>
         <td>Server: smtp.gmail.com<br />
           Port: 465<br />
           Encryption: SSL/TLS</td>
-        <td><a
-            href="https://help.groovehq.com/help/why-wont-my-gmail-smtp-settings-work#:~:text=In%20Google%20Mail%2C%20you%20must,this%20setting%20must%20be%20enabled%3A&text=Please%20note%20that%20these%20options,enabled%20for%20your%20Google%20account"
+        <td>Allow "less secure" app<br /><a
+            href="https://support.google.com/accounts/answer/6010255?hl=en"
             target="_blank">GMail</a><br />
           <a href="https://support.google.com/a/answer/6260879" target="_blank">GSuite</a></td>
       </tr>
