--- a/website/index.html
+++ b/website/index.html
@@ -180,7 +180,7 @@
       <tr>
         <td>Gmail<br />GSuite</td>
         <td>Server: smtp.gmail.com<br />
-          Port: 465<br />
+          Port: 587, 465<br />
           Encryption: SSL/TLS</td>
         <td>Allow "less secure" app<br /><a
             href="https://support.google.com/accounts/answer/6010255?hl=en"
